# todo_api_using_postgres

./: .env  .gitignore  Cargo.toml  README.md  Todo_API_Using_Postgres_In_Rust.collection.json
src/: cors.rs  error_responder.rs  main.rs  params.rs  setup.rs  todos.rs
src/entities/: mod.rs  paginated_todo.rs  prelude.rs  todo.rs
src/todos/: dtos.rs  todo_routes.rs
src/todos/dtos/: paginated_todo.rs  todo_dto.rs  todo_task.rs
