[package]
name = "todo_api_using_postgres"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.7"
tower-http = { version = "0.6.1", features = ["cors"] }
